Getting security questions for a user API added
http://localhost:4000/api-docs/\#/Patient/get_getSecurityQuestions__user_id_
